# uno-bevy

./: .gitignore  LICENSE  README.md
uno_game/: Cargo.toml  uno.txt
uno_game/src/: card.rs  deck.rs  main.rs  player.rs
uno_game/src/deck/: events.rs  mod.rs  resources.rs  systems.rs
uno_game/src/game/: mod.rs
uno_game/src/game/deck/: components.rs  mod.rs  resources.rs  systems.rs
uno_game/src/game/player/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
uno_game/src/player/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
