[package]
name = "uno_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
card_shuffling = { git = "https://github.com/arif-kiz/card-shuffling", branch = "trait" }
rand = "0.10.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
